# remembrance

./: DEVLOG.md  LICENSE.txt  PROTO.md  README.md
cyrene/: Cargo.toml  README.md  config.toml.sample
cyrene/docs/: daemon-sketch.md
cyrene/src/: config.rs  daemon.rs  main.rs
cyrene/src/daemon/: err.rs  mod.rs  msg.rs  proto.rs  tcp.rs  units.rs  ws.rs  zfs.rs
cyrene/src/daemon/tcp/: hs.rs  mod.rs  wire.rs
snapcon/: .gitignore  README.md  mix.exs
snapcon/assets/css/: app.css  hero.css
snapcon/config/: config.exs  dev.exs  prod.exs  runtime.exs  secret.exs.sample  test.exs
snapcon/lib/: snapcon.ex  snapcon_web.ex  zfs_snapcon_web.ex
snapcon/lib/snapcon/: application.ex  backup_server.ex  daemon_server.ex  host.ex  job_server.ex  mailer.ex  repo.ex  task.ex  tcp_server.ex  units.ex
snapcon/lib/snapcon/zfs/: zfs_list.ex
snapcon/lib/snapcon_web/: debug_viewer.ex  endpoint.ex  gettext.ex  json_parser.ex  router.ex
snapcon/lib/snapcon_web/api_socket/: plug.ex  socket.ex
snapcon/lib/snapcon_web/components/: core_components.ex  layout_helpers.ex  layouts.ex  page_fragments.ex
snapcon/lib/snapcon_web/controllers/: error_html.ex  host_controller.ex  host_html.ex
snapcon/lib/snapcon_web/live/: host_cmd_live.ex  job_queue_live.html.heex
snapcon/lib/zfs_snapcon/: backup_server.ex
snapcon/lib/zfs_snapcon_web/: endpoint.ex  json_parser.ex  router.ex  telemetry.ex
snapcon/lib/zfs_snapcon_web/api_socket/: socket.ex
snapcon/lib/zfs_snapcon_web/components/: core_components.ex  layouts.ex  page_fragments.ex
snapcon/lib/zfs_snapcon_web/controllers/: api_controller.ex  api_socket.ex  error_json.ex  host_html.ex
snapcon/lib/zfs_snapcon_web/live/: host_cmd_live.ex  job_queue_live.ex  job_queue_live.html.heex  live_fragments.ex
snapcon/priv/repo/: seeds.exs
snapcon/test/: test_helper.exs
snapcon/test/support/: conn_case.ex  data_case.ex
snapcon/test/zfs_snapcon/: backup_server_test.exs  host_test.exs  units_test.exs
snapcon/test/zfs_snapcon_web/: layout_helpers_test.exs
(+22 files in other folders)
