[package]
name = "cyrene"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
bitflags = "2.11.0"
blinkedblist = { git = "https://git.sr.ht/~hime/blinkedblist" }
byteorder = { version = "1.5.0", features = ["i128"] }
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
data-encoding = "2.10.0"
ed25519-dalek = { version = "3.0.0-pre.6", features = ["rand_core"] }
mio = { version = "1.2.0", features = ["net", "os-poll"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
snow = "0.10.0"
thiserror = "2.0.18"
toml = "1.0.6"
tracing = "0.1.44"
